<resources>
    <string name="app_name">Pokengur</string>
    <string name="action_settings">Settings</string>
    <string name="random">Random</string>
    <string name="refresh">Refresh</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_message">Are you sure you want to clear your current image cache?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>
    <string name="cant_launch_intent">Your device in unable to handle this link</string>
    <string name="loading_image_error">Unable to load image.</string>
    <string name="moments_ago">Moments Ago</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="user_not_logged_in">You must be logged in to complete this action</string>
    <string name="up_vote">Up Vote</string>
    <string name="down_vote">Down Vote</string>
    <string name="reply">Reply</string>
    <string name="view_user">View Profile</string>
    <string name="sort_by">Sort By</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_source">Open Source</string>
    <string name="view_source">View Source Code</string>
    <string name="upload_success">Uploaded to %s</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="view_licenses">View Open Source Licenses</string>
    <string name="retry">Retry</string>
    <string name="gallery">Gallery</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="login_msg">Tap to login</string>
    <string name="login_pin_message">Tap "Open Browser", sign in to Imgur, copy the PIN, then paste it here.</string>
    <string name="login_open_browser">Open Browser</string>
    <string name="login_submit_pin">Submit PIN</string>
    <string name="login_pin_required">PIN is required</string>
    <string name="login_pin_failed">Unable to login with PIN. Please try again.</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="link_copied">Link copied</string>
    <string name="link_copy_failed">Unable to copy link</string>
    <string name="caution">Caution</string>
    <string name="okay">Okay</string>
    <string name="copy_album_link">Copy Album Link</string>
    <string name="add">Add</string>
    <string name="undo">Undo</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="hide_comment_bar">Hide bottom bar</string>
    <string name="download_album">Download Album</string>
    <string name="search_Pokengur">Search Pokengur</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="clearing_cache">Clearing cache&#8230;</string>
    <string name="view_gallery">View Gallery</string>
    <string name="messages_removal">Messages are no longer available through the Imgur API. Sorry for the inconvenience. This tab will be removed in a following update.</string>
    <string name="error_generic">An unexpected error has occurred. Please try again.</string>
    <string name="error_401">This requires you to be logged in. Please login and try again.</string>
    <string name="error_403">You do not have permission to complete this action. You might need to login again.</string>
    <string name="error_429">The rate limit for Pokengur has been hit. There is nothing that can done about this. Check back
    later.</string>
    <string name="error_503">Imgur is currently over capacity. Boo…</string>
    <string name="error_network">Unable to connect to Imgur. Check your connection and try again.</string>
    <string name="error_timeout">The request timed out. Please check your connection and try again.</string>
    <string name="error_ssl">A secure connection to Imgur could not be established. Please try again later.</string>
    <string name="download_error">An error occurred while downloading</string>
    <string name="error">Error</string>
    <string name="error_invalid_data">Required data was missing. Please go back and try again.</string>
    <string name="error_comments_mismatch">Comments could not be loaded for this item. Please refresh and try again.</string>
    <string name="error_login_response">Login response was incomplete. Please sign in again.</string>
    <string name="error_pick_image">No image was selected. Please choose an image and try again.</string>
    <string name="error_comment_context">Unable to open comment form for this item.</string>
    <string name="upload_camera_error">An error occurred while capturing your photo. Please try again</string>
    <string name="error_link_open">Unable to open link</string>
    <string name="notoriety_forever_alone">Forever Alone</string>
    <string name="notoriety_neutral">Neutral</string>
    <string name="notoriety_liked">Liked</string>
    <string name="notoriety_accepted">Accepted</string>
    <string name="notoriety_glorious">Glorious</string>
    <string name="notoriety_renowned">Renowned</string>
    <string name="notoriety_idolized">Idolized</string>
    <string name="notoriety_trusted">Trusted</string>
    <string name="filter">Filter</string>
    <string name="filter_viral">Most Viral</string>
    <string name="filter_user_sub">User Submitted</string>
    <string name="filter_show_viral">Show Viral</string>
    <string name="sort_new">New</string>
    <string name="sort_best">Best</string>
    <string name="sort_top">Top</string>
    <string name="sort_worst">Worst</string>
    <string name="uploaded_photos_empty">You have not uploaded any photos from this device</string>
    <string name="uploaded_photos_title">Uploads</string>
    <string name="uploaded_remove_photo_message">Are you sure you want to remove this photo?</string>
    <string name="uploaded_remove_album_message">Are you sure you want to remove this Album?</string>
    <string name="uploaded_remove_imgur">Remove from Imgur</string>
    <string name="profile_no_uploads">You haven\'t uploaded any images</string>
    <string name="profile_delete_image">Are you sure you want to delete this image?</string>
    <string name="profile_delete_album">Are you sure you want to delete this album?</string>
    <string name="profile_delete_success_image">Image deleted</string>
    <string name="profile_delete_success_album">Album deleted</string>
    <string name="profile_rep">%d Reputation</string>
    <string name="profile_date">Since %s</string>
    <string name="profile_bio_empty">%s does not have a bio.</string>
    <string name="profile_no_favorites">%s has no favorite galleries</string>
    <string name="profile_no_submissions">%s has not shared any images with Imgur</string>
    <string name="profile_no_comments">%s has not posted any comments to Imgur</string>
    <string name="pref_cache_title">Cache</string>
    <string name="pref_current_cache_size">Current Cache Size</string>
    <string name="pref_comment_title">Comments</string>
    <string name="pref_comments_on">Display Comments</string>
    <string name="pref_comments_off">Don\'t Display Comments</string>
    <string name="pref_mosaic_view_title">Mosaic Home Feed</string>
    <string name="pref_mosaic_view_on">Use mixed tile heights on the home feed</string>
    <string name="pref_mosaic_view_off">Use the classic uniform grid on the home feed</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_theme_title">Accent Color</string>
    <string name="pref_theme_summary">Choose the app accent color</string>
    <string name="pref_adb_title">ADB Logs</string>
    <string name="pref_adb_disabled">ADB Logs disabled</string>
    <string name="pref_adb_enabled">ADB Logs enabled</string>
    <string name="pref_cache_loc_title">Cache Location</string>
    <string name="pref_cache_size_title">Maximum Cache Size</string>
    <string name="pref_nsfw_title">NSFW Images</string>
    <string name="pref_nsfw_on">Allow NSFW images</string>
    <string name="pref_nsfw_off">Don\'t allow NSFW images</string>
    <string name="pref_nsfw_thumb_title">NSFW Thumbnail</string>
    <string name="pref_nsfw_thumb_on">Allow NSFW thumbnails</string>
    <string name="pref_nsfw_thumb_off">Don\'t allow NSFW thumbnails</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_on">Dark mode enabled</string>
    <string name="pref_dark_theme_off">Dark mode disabled</string>
    <string name="pref_amoled_theme_title">AMOLED Black</string>
    <string name="pref_amoled_theme_on">Use pure black backgrounds in dark mode</string>
    <string name="pref_amoled_theme_off">Use standard dark backgrounds</string>
    <string name="pref_reddit_title">Subreddit search history</string>
    <string name="pref_reddit_desc">Clear subreddit search history</string>
    <string name="pref_subreddit_clear_desc">Clear my subreddits</string>
    <string name="pref_exit_title">Confirm App Exit</string>
    <string name="pref_exit_on">Prompt me before exiting Pokengur</string>
    <string name="pref_exit_off">Do not prompt me when exiting Pokengur</string>
    <string name="pref_search_title">Gallery Search History</string>
    <string name="pref_search_desc">Clear Gallery Search History</string>
    <string name="pref_tags_title">Tags</string>
    <string name="pref_tags_on">Display Tags</string>
    <string name="pref_tags_off">Don\'t Display Tags</string>
    <string name="pref_thumbnail_quality">Thumbnail Quality</string>
    <string name="pref_notification_title">Check For Notifications</string>
    <string name="pref_notification_frequency">Notification Refresh Delay</string>
    <string name="pref_notification_ringtone">Notification Ringtone</string>
    <string name="pref_notification_vibrate">Vibrate</string>
    <string name="pref_notification_vibrate_on">Vibrate when notifications are received</string>
    <string name="pref_notification_vibrate_off">Don\'t vibrate when notifications are received</string>
    <string name="pref_immersive_mode_title">Fullscreen Immersive Mode</string>
    <string name="pref_immersive_mode_on">Enable Immersive mode</string>
    <string name="pref_immersive_mode_off">Disable Immersive Mode</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="battery_optimizations">Battery Optimizations</string>
    <string name="pref_battery_saver_title">Battery Saver Mode</string>
    <string name="pref_battery_saver_on">Reduce image quality and background activity</string>
    <string name="pref_battery_saver_off">Use normal performance settings</string>
    <string name="pref_reduce_background_title">Reduce Background Activity</string>
    <string name="pref_reduce_background_on">Minimize background network requests</string>
    <string name="pref_reduce_background_off">Allow normal background activity</string>
    <string name="pref_experimental_thread_size">Image Thread Pool Size</string>
    <string name="open_src_licenses">Open Source Licenses</string>
    <string name="my_subreddits">My Subreddits</string>
</resources>