<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="appearanceSettings"
        android:title="@string/pref_appearance_title">

        <Preference
            android:key="color"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_summary"
            android:persistent="false" />

        <SwitchPreference
            android:key="darkTheme"
            android:defaultValue="true"
            android:summaryOn="@string/pref_dark_theme_on"
            android:summaryOff="@string/pref_dark_theme_off"
            android:title="@string/pref_dark_theme_title" />

        <SwitchPreference
            android:key="amoledTheme"
            android:defaultValue="true"
            android:summaryOn="@string/pref_amoled_theme_on"
            android:summaryOff="@string/pref_amoled_theme_off"
            android:title="@string/pref_amoled_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gallery">

        <ListPreference
            android:key="thumbnailQuality"
            android:title="@string/pref_thumbnail_quality"
            android:entries="@array/pref_gallery_thumbnails"
            android:entryValues="@array/pref_thumbanail_keys"
            android:defaultValue="b" />

        <CheckBoxPreference
            android:key="autoLoadComments"
            android:summaryOn="@string/pref_comments_on"
            android:summaryOff="@string/pref_comments_off"
            android:title="@string/pref_comment_title"
            android:defaultValue="true" />

        <ListPreference
            android:key="autoplayMode"
            android:title="@string/pref_autoplay_mode_title"
            android:summary="@string/pref_autoplay_mode_summary"
            android:entries="@array/pref_autoplay_mode_entries"
            android:entryValues="@array/pref_autoplay_mode_values"
            android:defaultValue="0" />

        <CheckBoxPreference
            android:key="mosaicView"
            android:title="@string/pref_mosaic_view_title"
            android:summaryOn="@string/pref_mosaic_view_on"
            android:summaryOff="@string/pref_mosaic_view_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="autoLoadTags"
            android:summaryOn="@string/pref_tags_on"
            android:summaryOff="@string/pref_tags_off"
            android:title="@string/pref_tags_title"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="immersiveMode"
            android:summaryOn="@string/pref_immersive_mode_on"
            android:summaryOff="@string/pref_immersive_mode_off"
            android:title="@string/pref_immersive_mode_title"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="allowNSFW"
            android:title="@string/pref_nsfw_title"
            android:summaryOn="@string/pref_nsfw_on"
            android:summaryOff="@string/pref_nsfw_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="NSFWThumbnails"
            android:title="@string/pref_nsfw_thumb_title"
            android:summaryOn="@string/pref_nsfw_thumb_on"
            android:summaryOff="@string/pref_nsfw_thumb_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="confirmExit"
            android:title="@string/pref_exit_title"
            android:summaryOn="@string/pref_exit_on"
            android:summaryOff="@string/pref_exit_off"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/battery_optimizations">

        <CheckBoxPreference
            android:key="batterySaverMode"
            android:title="@string/pref_battery_saver_title"
            android:summaryOn="@string/pref_battery_saver_on"
            android:summaryOff="@string/pref_battery_saver_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="reduceBackgroundActivity"
            android:title="@string/pref_reduce_background_title"
            android:summaryOn="@string/pref_reduce_background_on"
            android:summaryOff="@string/pref_reduce_background_off"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <CheckBoxPreference
            android:key="notifications"
            android:title="@string/pref_notification_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="notificationFrequency"
            android:title="@string/pref_notification_frequency"
            android:entries="@array/notification_times"
            android:entryValues="@array/pref_notification_keys"
            android:defaultValue="30" />

        <RingtonePreference
            android:key="notificationRingtone"
            android:title="@string/pref_notification_ringtone" />

        <CheckBoxPreference
            android:key="notificationVibrate"
            android:title="@string/pref_notification_vibrate"
            android:icon="@drawable/ic_action_message_24dp"
            android:summaryOn="@string/pref_notification_vibrate_on"
            android:summaryOff="@string/pref_notification_vibrate_off"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_title">

        <ListPreference
            android:key="cacheLoc"
            android:title="@string/pref_cache_loc_title"
            android:entries="@array/pref_cache_loc_items"
            android:entryValues="@array/pref_cache_loc_keys"
            android:defaultValue="internal" />

        <Preference
            android:key="currentCacheSize"
            android:title="@string/pref_current_cache_size" />

        <Preference
            android:key="gallerySearchHistory"
            android:title="@string/pref_search_title"
            android:summary="@string/pref_search_desc" />

        <Preference
            android:key="redditHistory"
            android:title="@string/pref_reddit_title"
            android:summary="@string/pref_reddit_desc" />

        <Preference
            android:key="mySubreddits"
            android:title="@string/my_subreddits"
            android:summary="@string/pref_subreddit_clear_desc" />

        <ListPreference
            android:key="cacheSize"
            android:title="@string/pref_cache_size_title"
            android:entries="@array/pref_cache_size_items"
            android:entryValues="@array/pref_cache_size_keys"
            android:defaultValue="512" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/developer"
        android:key="developerSettings">

        <ListPreference
            android:key="threadSize"
            android:title="@string/pref_experimental_thread_size"
            android:entries="@array/pref_thread_items"
            android:entryValues="@array/pref_thread_keys"
            android:defaultValue="3" />

        <CheckBoxPreference
            android:key="adb"
            android:title="@string/pref_adb_title"
            android:summaryOn="@string/pref_adb_enabled"
            android:summaryOff="@string/pref_adb_disabled"
            android:defaultValue="false" />

        <Preference
            android:key="licenses"
            android:title="@string/open_src_licenses"
            android:summary="@string/view_licenses" />

        <Preference
            android:key="openSource"
            android:title="@string/open_source"
            android:summary="@string/view_source" />

        <Preference
            android:key="privacyPolicy"
            android:title="@string/pref_privacy_policy"/>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:enabled="false" />

    </PreferenceCategory>

</PreferenceScreen>